--- a/MobilePaymentGateway/src/main/resources/application.properties
+++ b/MobilePaymentGateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/tls_db
+spring.datasource.url = jdbc:mysql://localhost:3306/tls_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
